package behavioral.strategy.cc1;

public class Cong implements ITinh{
    @Override
    public float tinh(float a, float b) {
        return a + b;
    }
}
