@startuml
'https://plantuml.com/class-diagram

class context{
    - ITinh tinhToan
    + void setTinhToan(ITinh tinhToan)
    + float tinh(float a, float b)

}
interface ITinh{
    + float tinh(float a, float b)
}
class Cong{
    + float tinh(float a, float b)
}
class Tru{
    + float tinh(float a, float b)
}
class Nhan{
    + float tinh(float a, float b)
}
class Chia{
    + float tinh(float a, float b)
}

ITinh <|.. Chia
ITinh <|.. Cong
ITinh <|.. Tru
ITinh <|..Nhan
context o--> ITinh

@enduml